# UCF

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
adapters/terminal/crates/ucf-terminal/: Cargo.toml
adapters/terminal/crates/ucf-terminal/src/: lib.rs
ai/crates/ucf-ai-runtime/: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
chip-3/: README.md
chip4/: Cargo.toml
chip4/src/: lib.rs
config/: anti_flapping.yaml  class_thresholds.yaml  engine_limits.yaml  hpa.yaml  regulator_overlays.yaml  regulator_profiles.yaml  regulator_update_tables.yaml  windowing.yaml
core/crates/ucf-ai-port/: Cargo.toml
core/crates/ucf-ai-port/src/: lib.rs
core/crates/ucf-attn-controller/: Cargo.toml
core/crates/ucf-bus/: Cargo.toml
core/crates/ucf-cde/: Cargo.toml
core/crates/ucf-cde-port/: Cargo.toml
core/crates/ucf-commit/: Cargo.toml
core/crates/ucf-consistency-engine/: Cargo.toml
core/crates/ucf-consistency-engine/src/: lib.rs
core/crates/ucf-coupling/: Cargo.toml
core/crates/ucf-crypto/: Cargo.toml
core/crates/ucf-events/: Cargo.toml
core/crates/ucf-evidence/: Cargo.toml
core/crates/ucf-evidence/src/: file_store.rs  lib.rs
core/crates/ucf-fold/: Cargo.toml
core/crates/ucf-iit/: Cargo.toml
core/crates/ucf-iit-monitor/: Cargo.toml  README.md
core/crates/ucf-influence/: Cargo.toml
core/crates/ucf-ingestion/: Cargo.toml
core/crates/ucf-ingestion/src/: lib.rs
core/crates/ucf-ism/: Cargo.toml
core/crates/ucf-lens-port/: Cargo.toml
core/crates/ucf-ncde/: Cargo.toml
core/crates/ucf-ncde-port/: Cargo.toml
core/crates/ucf-nsr/: Cargo.toml
core/crates/ucf-nsr-datalog/: Cargo.toml
core/crates/ucf-nsr-port/: Cargo.toml
core/crates/ucf-nsr-smt/: Cargo.toml
core/crates/ucf-nsr/src/: backend_datalog.rs  backend_smt.rs  lib.rs  notar.rs
core/crates/ucf-ode-port/: Cargo.toml
core/crates/ucf-onn/: Cargo.toml
core/crates/ucf-risk-gate/: Cargo.toml
core/crates/ucf-risk-gate/src/: lib.rs
core/crates/ucf-router/: Cargo.toml
core/crates/ucf-router/src/: lib.rs
core/crates/ucf-router/tests/: wire_path_e2e.rs
core/crates/ucf-rsa/: Cargo.toml
core/crates/ucf-rsa/src/: lib.rs  v0.rs
core/crates/ucf-sae-port/: Cargo.toml
core/crates/ucf-sae-port/src/: lib.rs
core/crates/ucf-sandbox/: Cargo.toml
core/crates/ucf-sandbox/src/: lib.rs
core/crates/ucf-sle/: Cargo.toml
core/crates/ucf-sle/src/: lib.rs
core/crates/ucf-sleep-coordinator/: Cargo.toml
core/crates/ucf-sleep-coordinator/src/: lib.rs
core/crates/ucf-spike-encoder/: Cargo.toml
core/crates/ucf-spike-encoder/src/: lib.rs
core/crates/ucf-structural-store/: Cargo.toml
core/crates/ucf-structural-store/src/: lib.rs
core/crates/ucf-workspace/: Cargo.toml
core/crates/ucf-workspace/src/: lib.rs
crates/asset_chunker/: Cargo.toml
crates/asset_rehydration/: Cargo.toml
crates/baseline_resolver/: Cargo.toml
crates/biophys_asset_builder/: Cargo.toml
crates/biophys_assets/: Cargo.toml
crates/biophys_channels/: Cargo.toml
crates/biophys_compartmental_solver/: Cargo.toml
crates/biophys_core/: Cargo.toml
crates/biophys_event_queue_l4/: Cargo.toml
crates/biophys_feedback/: Cargo.toml
crates/biophys_governance/: Cargo.toml
crates/biophys_injection/: Cargo.toml
crates/biophys_morphology/: Cargo.toml
crates/biophys_runtime/: Cargo.toml
crates/biophys_runtime/src/: lib.rs
crates/biophys_runtime/tests/: biophys_lif_demo.rs  biophys_synapse.rs  csr_adjacency.rs  partitioned_runtime.rs
crates/biophys_solver/: Cargo.toml
crates/biophys_synapses_l4/: Cargo.toml
crates/biophys_trace/: Cargo.toml
crates/dbm_0_sn/: Cargo.toml
crates/dbm_6_dopamin_nacc/: Cargo.toml
crates/dbm_6_dopamin_nacc/src/: lib.rs
crates/dbm_7_lc/: Cargo.toml
crates/dbm_7_lc/src/: lib.rs
crates/dbm_bus/: Cargo.toml
crates/dbm_hpa/: Cargo.toml
crates/microcircuit_amygdala_l4/: Cargo.toml
crates/microcircuit_cerebellum_pop/: Cargo.toml
crates/microcircuit_cerebellum_stub/: Cargo.toml
crates/microcircuit_core/: Cargo.toml
crates/microcircuit_dopamin_attractor/: Cargo.toml
crates/microcircuit_dopamin_stub/: Cargo.toml
crates/microcircuit_hypothalamus_l4/: Cargo.toml
crates/microcircuit_hypothalamus_setpoint/: Cargo.toml
crates/microcircuit_hypothalamus_setpoint/src/: lib.rs
crates/microcircuit_insula_l4/: Cargo.toml
crates/microcircuit_lc_l4/: Cargo.toml
crates/microcircuit_pag_attractor/: Cargo.toml
crates/microcircuit_pag_l4/: Cargo.toml
crates/microcircuit_pag_stub/: Cargo.toml
crates/microcircuit_sn_biophys/: Cargo.toml
crates/microcircuit_sn_l4/: Cargo.toml
crates/microcircuit_sn_l4/src/: ca_feedback.rs  lib.rs
crates/pvgs/: Cargo.toml
crates/replay_evidence/: Cargo.toml
crates/replay_executor/: Cargo.toml
crates/replay_executor/src/: lib.rs
docs/: architecture.md  l4_determinism.md
domains/archive/crates/ucf-archive/: Cargo.toml
domains/archive/crates/ucf-archive-firewood/: Cargo.toml
domains/archive/crates/ucf-archive-firewood/src/: lib.rs
domains/archive/crates/ucf-archive/src/: lib.rs  store.rs
domains/brain/crates/ucf-brain-mapper/: Cargo.toml
domains/brain/crates/ucf-brain-mapper/src/: lib.rs
domains/consolidation/crates/ucf-consolidation/: Cargo.toml
domains/consolidation/crates/ucf-consolidation/src/: lib.rs
domains/features/crates/ucf-feature-spiker/: Cargo.toml
domains/features/crates/ucf-feature-spiker/src/: lib.rs
domains/geist/crates/ucf-geist/: Cargo.toml
domains/geist/crates/ucf-geist/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  microcircuit_publisher.rs  proto_bridge.rs
engine/tests/: baseline_integration.rs  cbv_digest_roundtrip.rs  dopamin_integration.rs  macro_milestone_cbv_control.rs  trace_health.rs
hpa/: Cargo.toml
hpa/src/: lib.rs
profiles/: Cargo.toml
profiles/src/: classification.rs  config.rs  lib.rs
pvgs_client/: Cargo.toml
pvgs_client/src/: lib.rs  local.rs
rsv/: Cargo.toml
rsv/src/: lib.rs
ucf-protocol/: Cargo.toml
ucf-protocol/spec/: messages_v1.md
ucf-protocol/src/: lib.rs
wire/: Cargo.toml
wire/src/: lib.rs
(+155 files in other folders)
