[workspace]
members = [
    "wire",
    "rsv",
    "engine",
    "profiles",
    "hpa",
    "pvgs_client",
    "app",
    "ucf-protocol", "chip4",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
