[workspace]
members = [
    "ai/crates/ucf-ai-runtime",
    "wire",
    "rsv",
    "engine",
    "profiles",
    "hpa",
    "pvgs_client",
    "app",
    "protocol/crates/ucf-protocol",
    "chip4",
    "core/crates/ucf-types",
    "core/crates/ucf-workspace",
    "core/crates/ucf-ai-port",
    "core/crates/ucf-sle",
    "core/crates/ucf-iit-monitor",
    "core/crates/ucf-ssm-port",
    "core/crates/ucf-ncde-port",
    "core/crates/ucf-ode-port",
    "core/crates/ucf-tcf-port",
    "core/crates/ucf-onn",
    "core/crates/ucf-spikebus",
    "core/crates/ucf-spike-encoder",
    "core/crates/ucf-nsr-port",
    "core/crates/ucf-events",
    "core/crates/ucf-tom-port",
    "core/crates/ucf-influence",
    "core/crates/ucf-attn-controller",
    "core/crates/ucf-recursion-controller",
    "core/crates/ucf-ism",
    "core/crates/ucf-consistency-engine",
    "core/crates/ucf-predictive-coding",
    "core/crates/ucf-nsr-smt",
    "core/crates/ucf-nsr-datalog",
    "core/crates/ucf-cde-port",
    "core/crates/ucf-scm-port",
    "core/crates/ucf-lens-port",
    "core/crates/ucf-sae-port",
    "core/crates/ucf-router",
    "core/crates/ucf-crypto",
    "core/crates/ucf-bus",
    "core/crates/ucf-rsa",
    "core/crates/ucf-rsa-hooks",
    "core/crates/ucf-openevolve-port",
    "core/crates/ucf-sleep-coordinator",
    "core/crates/ucf-ingestion",
    "core/crates/ucf-fold",
    "core/crates/ucf-evidence",
    "core/crates/ucf-commit",
    "core/crates/ucf-output-router",
    "core/crates/ucf-sandbox",
    "core/crates/ucf-policy-ecology",
    "core/crates/ucf-risk-gate",
    "crates/dbm_core",
    "crates/dbm_13_hypothalamus",
    "crates/dbm_12_insula",
    "crates/dbm_0_sn",
    "crates/dbm_7_lc",
    "crates/dbm_8_serotonin",
    "crates/dbm_6_dopamin_nacc",
    "crates/dbm_9_amygdala",
    "crates/dbm_pag",
    "crates/dbm_stn",
    "crates/dbm_pmrf",
    "crates/dbm_sc",
    "crates/dbm_pprf",
    "crates/dbm_18_cerebellum",
    "crates/dbm_hpa",
    "crates/emotion_field",
    "crates/baseline_resolver",
    "crates/dbm_bus",
    "crates/microcircuit_core",
    "crates/memristor_backend",
    "crates/microcircuit_hpa_memristor",
    "crates/microcircuit_hypothalamus_setpoint",
    "crates/microcircuit_hypothalamus_l4",
    "crates/microcircuit_sn_stub",
    "crates/microcircuit_sn_attractor",
    "crates/microcircuit_sn_biophys",
    "crates/microcircuit_sn_l4",
    "crates/microcircuit_lc_stub",
    "crates/microcircuit_lc_spike",
    "crates/microcircuit_lc_biophys",
    "crates/microcircuit_lc_l4",
    "crates/microcircuit_dopamin_stub",
    "crates/microcircuit_dopamin_attractor",
    "crates/microcircuit_serotonin_stub",
    "crates/microcircuit_serotonin_attractor",
    "crates/microcircuit_amygdala_stub",
    "crates/microcircuit_amygdala_pop",
    "crates/microcircuit_amygdala_biophys",
    "crates/microcircuit_amygdala_l4",
    "crates/microcircuit_cerebellum_stub",
    "crates/microcircuit_cerebellum_pop",
    "crates/microcircuit_pag_stub",
    "crates/microcircuit_pag_attractor",
    "crates/microcircuit_pag_biophys",
    "crates/microcircuit_pag_l4",
    "crates/microcircuit_stn_stub",
    "crates/microcircuit_stn_hold",
    "crates/microcircuit_stn_biophys",
    "crates/microcircuit_pmrf_stub",
    "crates/microcircuit_pmrf_rhythm",
    "crates/microcircuit_pmrf_biophys",
    "crates/microcircuit_sc_stub",
    "crates/microcircuit_sc_attractor",
    "crates/microcircuit_insula_stub",
    "crates/microcircuit_insula_fusion",
    "crates/microcircuit_insula_l4",
    "crates/biophys_core",
    "crates/biophys_assets",
    "crates/biophys_asset_builder",
    "crates/biophys_solver",
    "crates/biophys_runtime",
    "crates/biophys_morphology",
    "crates/biophys_channels",
    "crates/biophys_compartmental_solver",
    "crates/biophys_event_queue_l4",
    "crates/assets",
    "crates/asset_chunker",
    "crates/asset_rehydration",
    "crates/pvgs",
    "crates/query",
    "crates/scorecards",
    "crates/biophys_synapses_l4",
    "crates/biophys_plasticity_l4",
    "crates/biophys_homeostasis_l4",
    "crates/biophys_targeting_l4",
    "crates/biophys_trace",
    "crates/biophys_injection",
    "crates/biophys_governance",
    "crates/biophys_feedback",
    "crates/replay_executor",
    "crates/replay_evidence",
    "domains/policy-gateway/crates/ucf-policy-gateway",
    "domains/archive/crates/ucf-archive",
    "domains/archive/crates/ucf-archive-firewood",
    "domains/archive/crates/ucf-archive-store",
    "domains/consolidation/crates/ucf-consolidation",
    "domains/ai-sandbox/crates/ucf-ai-sandbox",
    "domains/ai/crates/ucf-feature-translator",
    "domains/digitalbrain/crates/ucf-digitalbrain-port",
    "domains/digital-brain/crates/ucf-digital-brain",
    "domains/brain/crates/ucf-bluebrain-port",
    "domains/causal/crates/ucf-cde-scm",
    "domains/brain/crates/ucf-brain-mapper",
    "domains/geist/crates/ucf-geist",
    "domains/index/crates/ucf-vector-index",
    "domains/index/crates/ucf-vector-index-qdrant",
    "domains/reasoning/crates/ucf-nsr",
    "adapters/rig/crates/ucf-rig",
    "adapters/terminal/crates/ucf-terminal",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license-file = "README.md"
homepage = "https://example.invalid/ucf"
repository = "https://example.invalid/ucf"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
hex = "0.4.3"
metrics = "0.24.2"
sha2 = "0.10.9"
tracing = "0.1.41"
ucf-archive-store = { path = "domains/archive/crates/ucf-archive-store" }
ucf-archive-firewood = { path = "domains/archive/crates/ucf-archive-firewood", default-features = false }

[workspace.features]
archive-firewood = ["ucf-archive-firewood/archive-firewood"]
digitalbrain = [
    "ucf-ai-port/digitalbrain",
    "ucf-digitalbrain-port/digitalbrain",
    "ucf-rig/digitalbrain",
]

[workspace.lints]
