[package]
name = "ucf-ai-port"
version = "0.1.0"
edition = "2021"

[dependencies]
ucf-types = { path = "../ucf-types" }
ucf-commit = { path = "../ucf-commit" }
ucf-policy-ecology = { path = "../ucf-policy-ecology" }
ucf-sandbox = { path = "../ucf-sandbox" }
ucf-ai-runtime = { path = "../../../ai/crates/ucf-ai-runtime", optional = true }
ucf-bus = { path = "../ucf-bus", optional = true }
ucf-cde-port = { path = "../ucf-cde-port" }
ucf-iit-monitor = { path = "../ucf-iit-monitor" }
ucf-lens-port = { path = "../ucf-lens-port" }
ucf-ncde-port = { path = "../ucf-ncde-port" }
ucf-nsr-port = { path = "../ucf-nsr-port" }
ucf-nsr-smt = { path = "../ucf-nsr-smt", optional = true }
ucf-nsr-datalog = { path = "../ucf-nsr-datalog", optional = true }
ucf-ode-port = { path = "../ucf-ode-port", optional = true }
ucf-sae-port = { path = "../ucf-sae-port" }
ucf-sle = { path = "../ucf-sle" }
ucf-scm-port = { path = "../ucf-scm-port" }
ucf-ssm-port = { path = "../ucf-ssm-port" }
ucf-tcf-port = { path = "../ucf-tcf-port" }
ucf-attn-controller = { path = "../ucf-attn-controller" }
ucf-digitalbrain-port = { path = "../../../domains/digitalbrain/crates/ucf-digitalbrain-port" }
blake3 = "1"

[features]
bus = ["dep:ucf-bus"]
ai-runtime = ["dep:ucf-ai-runtime", "ucf-ai-runtime/ai-runtime"]
ode = ["dep:ucf-ode-port"]
burn = []
candle = []
digitalbrain = ["dep:ucf-bus"]
nsr-smt = ["dep:ucf-nsr-smt"]
nsr-datalog = ["dep:ucf-nsr-datalog"]

[dev-dependencies]
ucf-predictive-coding = { path = "../ucf-predictive-coding" }
