[package]
name = "ucf-evidence"
version = "0.1.0"
edition = "2021"

[dependencies]
ucf-crypto = { path = "../ucf-crypto" }
ucf_protocol = { package = "ucf-protocol", path = "../../../ucf-protocol" }
ucf-types = { path = "../ucf-types", features = ["serde"] }
bincode = "1.3"
serde = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
