[package]
name = "ucf-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
ucf-ai-port = { path = "../ucf-ai-port" }
ucf-bus = { path = "../ucf-bus" }
ucf-router = { path = "../ucf-router" }
ucf-sandbox = { path = "../ucf-sandbox" }
ucf-sleep-coordinator = { path = "../ucf-sleep-coordinator" }
ucf-types = { path = "../ucf-types" }
ucf-workspace = { path = "../ucf-workspace" }

[dev-dependencies]
prost = "0.12"
ucf-archive = { path = "../../../domains/archive/crates/ucf-archive" }
ucf-archive-store = { path = "../../../domains/archive/crates/ucf-archive-store" }
ucf-digital-brain = { path = "../../../domains/digital-brain/crates/ucf-digital-brain" }
ucf-policy-ecology = { path = "../ucf-policy-ecology" }
ucf-policy-gateway = { path = "../../../domains/policy-gateway/crates/ucf-policy-gateway" }
ucf-nsr-port = { path = "../ucf-nsr-port" }
ucf-risk-gate = { path = "../ucf-risk-gate" }
ucf-tom-port = { path = "../ucf-tom-port" }
