[package]
name = "ucf-router"
version = "0.1.0"
edition = "2021"

[dependencies]
ucf-ai-port = { path = "../ucf-ai-port" }
ucf-types = { path = "../ucf-types" }
ucf-policy-gateway = { path = "../../../domains/policy-gateway/crates/ucf-policy-gateway" }
ucf-archive = { path = "../../../domains/archive/crates/ucf-archive" }
ucf-digital-brain = { path = "../../../domains/digital-brain/crates/ucf-digital-brain" }
ucf-sandbox = { path = "../ucf-sandbox" }
ucf-policy-ecology = { path = "../ucf-policy-ecology" }
ucf-risk-gate = { path = "../ucf-risk-gate" }

[dev-dependencies]
prost = "0.12"
ucf-cde-port = { path = "../ucf-cde-port" }
ucf-nsr-port = { path = "../ucf-nsr-port" }
ucf-scm-port = { path = "../ucf-scm-port" }
