[package]
name = "ucf-rsa"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ucf-archive = { path = "../../../domains/archive/crates/ucf-archive" }
ucf-archive-store = { workspace = true }
ucf-bus = { path = "../ucf-bus" }
ucf-openevolve-port = { path = "../ucf-openevolve-port" }
ucf-policy-ecology = { path = "../ucf-policy-ecology" }
ucf-structural-store = { path = "../ucf-structural-store" }
ucf-types = { path = "../ucf-types" }

[dev-dependencies]
prost = "0.12"
