[package]
name = "ucf-sle"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ucf-cde-port = { path = "../ucf-cde-port" }
ucf-geist = { path = "../../../domains/geist/crates/ucf-geist" }
ucf-nsr-port = { path = "../ucf-nsr-port" }
ucf-types = { path = "../ucf-types" }
ucf-workspace = { path = "../ucf-workspace" }
