[package]
name = "ucf-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ucf-attn-controller = { path = "../ucf-attn-controller" }
ucf-consistency-engine = { path = "../ucf-consistency-engine" }
ucf-iit = { path = "../ucf-iit" }
ucf-output-router = { path = "../ucf-output-router" }
ucf-policy-ecology = { path = "../ucf-policy-ecology" }
ucf-predictive-coding = { path = "../ucf-predictive-coding" }
ucf-risk-gate = { path = "../ucf-risk-gate" }
ucf-sleep-coordinator = { path = "../ucf-sleep-coordinator" }
ucf-spikebus = { path = "../ucf-spikebus" }
ucf-structural-store = { path = "../ucf-structural-store" }
ucf-types = { path = "../ucf-types" }
