[package]
name = "ucf-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
ucf-bus = { path = "../../../../core/crates/ucf-bus" }
ucf-ingestion = { path = "../../../../core/crates/ucf-ingestion" }
ucf-sandbox = { path = "../../../../core/crates/ucf-sandbox" }
ucf-types = { path = "../../../../core/crates/ucf-types" }
