[package]
name = "ucf-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
serde = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
ucf-evidence = { path = "../../../../core/crates/ucf-evidence" }
ucf-fold = { path = "../../../../core/crates/ucf-fold" }
ucf-types = { path = "../../../../core/crates/ucf-types" }

[dev-dependencies]
tempfile = "3"
