[package]
name = "ucf-brain-mapper"
version = "0.1.0"
edition = "2021"
license-file = "../../../../README.md"

[dependencies]
blake3 = "1"
ucf-attn-controller = { path = "../../../../core/crates/ucf-attn-controller" }
ucf-bluebrain-port = { path = "../ucf-bluebrain-port" }
ucf-feature-translator = { path = "../../../ai/crates/ucf-feature-translator" }
ucf-predictive-coding = { path = "../../../../core/crates/ucf-predictive-coding" }
ucf-sandbox = { path = "../../../../core/crates/ucf-sandbox" }
ucf-types = { path = "../../../../core/crates/ucf-types" }
ucf-workspace = { path = "../../../../core/crates/ucf-workspace" }

[dev-dependencies]
ucf-attn-controller = { path = "../../../../core/crates/ucf-attn-controller" }
ucf-bluebrain-port = { path = "../ucf-bluebrain-port" }
ucf-feature-translator = { path = "../../../ai/crates/ucf-feature-translator" }
ucf-predictive-coding = { path = "../../../../core/crates/ucf-predictive-coding" }
ucf-sandbox = { path = "../../../../core/crates/ucf-sandbox" }
ucf-types = { path = "../../../../core/crates/ucf-types" }
ucf-workspace = { path = "../../../../core/crates/ucf-workspace" }
