[package]
name = "ucf-geist"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ucf-archive = { path = "../../../../domains/archive/crates/ucf-archive" }
ucf-commit = { path = "../../../../core/crates/ucf-commit" }
ucf-policy-ecology = { path = "../../../../core/crates/ucf-policy-ecology" }
ucf-types = { path = "../../../../core/crates/ucf-types" }
